--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "testtype": "mocha --reporter mochawesome --bail ./test/type"
+    "test": "mocha --reporter mochawesome --bail ./test/**/*.js",
+    "testType": "mocha --reporter mochawesome --bail ./test/type/*.js",
+    "testFile": "mocha --reporter mochawesome --bail ./test/file/*.js"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
